# lite-onnx

./: CMakeLists.txt  README.md  checker.cc  checker.h  proto_utils.h
common/: status.cc
defs/: attr_proto_util.h  data_type_utils.h  function.cc  function.h  operator_sets.h  operator_sets_preview.h  operator_sets_training.h  schema.cc  schema.h  shape_inference.h  tensor_proto_util.cc  tensor_proto_util.h
proto/: onnx-operators.proto
shape_inference/: implementation.cc  implementation.h
